generation_tests/parse_error/b.rs

// this is a parse error
let x =
